# ffmpegwithpy-rust

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/create_venv/: action.yml
.github/workflows/: CI.yml  fmt.yml  gen_docs.yml  lint.yml  test.yml
ffmpegwithpy-core/: Cargo.toml
ffmpegwithpy-core/src/: lib.rs
ffmpegwithpy-core/tests/: cmd_test.rs
ffmpegwithpy-rust/: Cargo.toml  pyproject.toml
ffmpegwithpy-rust/docs/en/: mkdocs.yml
ffmpegwithpy-rust/docs/en/docs/: about.md  index.md
ffmpegwithpy-rust/docs/ja/: mkdocs.yml
ffmpegwithpy-rust/docs/ja/docs/: about.md  index.md
ffmpegwithpy-rust/python/ffmpegwithpy/: ffmpegwithpy.pyi
ffmpegwithpy-rust/src/: lib.rs
ffmpegwithpy-rust/tests/: test_FFmpeg.py
python/ffmpegwithpy/: __init__.py  ffmpegwithpy.pyi
scripts/: build_docs.sh
src/: lib.rs
tests/: test_FFmpeg.py  test_command.py
