[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "ffmpegwithpy"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "maturin==0.13.7",
    "pytest==7.2.0",
    "black==22.10.0",
    "isort==5.10.1",
    "taskipy==1.10.3",
    "ruff==0.0.132",
]

[tool.maturin]
python-source = "python"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .ruff_cache
    | .venv
    | target
)
'''

[tool.ruff]
line-length = 119

select = ["F", "E", "W", "I"]

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    ".venv",
    "dist",
    "target",
]

[tool.taskipy.tasks]
fmt_black = "black ."
fmt_ruff = "ruff . --fix"
fmt_rust = "cargo fmt"
fmt = "task fmt_black & task fmt_ruff &task fmt_rust"

lint = "ruff ."

dev = "maturin dev -E dev"
