[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "ffmpegwithpy"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "maturin==0.14.16",
    "pytest==7.2.1",
    "black==23.1.0",
    "isort==5.11.5",
    "taskipy==1.10.4",
    "ruff==0.0.260",
    "pre-commit==2.21.0",
]

doc = ["mkdocs==1.4.2","mkdocs-material==9.1.4"]

[tool.maturin]
python-source = "python"
