[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "ffmpegwithpy"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "maturin==0.14.17",
    "pytest==7.2.2",
    "black==23.3.0",
    "isort==5.11.5",
    "taskipy==1.10.4",
    "ruff==0.0.257",
    "pre-commit==2.21.0",
]

doc = ["mkdocs==1.4.2","mkdocs-material==9.1.8"]

[tool.maturin]
python-source = "python"
