[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "ffmpegwithpy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "maturin==1.1.0",
    "pytest==7.3.1",
    "black==23.3.0",
    "isort==5.11.5",
    "taskipy==1.10.4",
    "ruff==0.0.285",
    "pre-commit==2.21.0",
]

doc = ["mkdocs==1.4.3","mkdocs-material==9.1.18"]

[tool.maturin]
python-source = "python"
